css/main.css
* {
  box-sizing: border-box;
  -o-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  color: #333;
}

body, button {
  font: 40px/1.5 Halant, serif;
}

a {
  color: dodgerblue;
}

h1, h2, h3, h4, h5 {
  font-family: Rohza One, serif;
}

code {
  font-family: PT Mono, monospace !important;
  font-size: 80%;
}

button {
  font-size: 40%;
  vertical-align: middle;
  border: 0;
  background: rgba(0, 0, 0, 0.5);
  color: white;
  border-radius: 1em;
  padding: 0 1em;
  line-height: 2em;
  cursor: pointer;
  margin: 0 5px;
}

button:focus {
  outline: none;
}

.slide {
  display: none;

  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  padding: 0 3em;

  text-align: center;
}

.editor {
  font-size: 16px;
  font-family: PT Mono, monospace !important;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(255, 255, 255, 0.9);
  z-index: 1000;
}

.editor input, .editor textarea {
  background: transparent;
  border: 0;
}

.editor input:focus,
.editor textarea:focus {
  outline: none;
}

.editor input {
  line-height: 64px;
  height: 64px;
  font-size: 32px;
  text-align: center;
  width: 100%;
}

.editor textarea {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  padding: 1em;
}

.editor-content,
.editor-css {
  display: block;
  position: absolute;
  top: 64px;
  bottom: 5em;
  overflow-y: auto;
}

.editor-content {
  left: 5em;
  right: 50%;
}

.editor-css {
  right: 5em;
  left: 50%;
}

.exit-edit {
  position: absolute;
  bottom: 10px;
  right: 20px;
  line-height: 60px;
}

.exit-edit button {
  font-size: 100%;
}

.info {
  position: fixed;
  width: 100%;
  bottom: 0;
  padding: 40px 20px 10px 20px;
  transform: translateY(70px);
  transition: transform ease-in-out 0.2s;
  z-index: 20;
}

.info:hover {
  transform: translateY(0);
}

.controls {
  text-align: right;
  float: right;
}

.spinner-overlay {
  background: white;

  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  z-index: 10;
}

.spinner {
  width: 100px;
  height: 100px;
  background-color: #333;

  -webkit-animation: rotateplane 1.2s infinite ease-in-out;
  animation: rotateplane 1.2s infinite ease-in-out;
}

@-webkit-keyframes rotateplane {
  0% { -webkit-transform: perspective(120px) }
  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
}

@keyframes rotateplane {
  0% {
    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
  } 50% {
    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
  } 100% {
    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
  }
}

.progress {
  position: fixed;
  bottom: 0;
  height: 10px;
  background-color: #eee;
  transition: width 0.2s ease-in-out;
}

